--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 </head>
+
 <body>
 	<h1>заголов ок</h1>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur aliquid eum non neque, nam harum nobis alias,
+		tempore repellat maiores accusamus blanditiis hic deserunt nisi in illo optio eius quia?</p>
 </body>
+
 </html>
