--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 	<h1>заголов ок</h1>
+	<h1>заголов ок2</h1>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur aliquid eum non neque, nam harum nobis alias,
 		tempore repellat maiores accusamus blanditiis hic deserunt nisi in illo optio eius quia?</p>
 </body>
